--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,9 @@
 ---
 # defaults file for ovirt.ocp4-ipi
+
+# General installation info
+ocp_installer_source: nightly
+ocp_installer_version: 4.4
+
+# RHCOS
+rhcos_use_custom_template: no
