--- a/tasks/installer_source/nightly.yml
+++ b/tasks/installer_source/nightly.yml
@@ -1,9 +1,22 @@
 ---
-- name: Download nightly build from {{ nightly_source_server }}
+- name: Download installer nightly build from {{ nightly_source_server }}
   get_url:
     dest: "{{ install_dir }}"
     url: "{{ nightly_source_server }}/{{ nightly_source_path }}/latest-{{ ocp_installer_version }}/{{ nightly_source_installer_file }}"
+  register: installer_download
+  # TODO: Add checksum verification in the future
 
 - name: Extract installer
-  pause:
-    seconds: 1
+  unarchive:
+    remote_src: true
+    src: "{{ installer_download.dest }}"
+    dest: "{{ install_dir }}"
+
+- name: Get installer version
+  shell: "{{ install_dir }}/{{ installer_binary }} version"
+  register: installer_version
+  no_log: true
+
+- name: Print installer version
+  debug:
+    msg: "OpenShift Installer Version: {{ installer_version.stdout_lines[0].split()[-1] }}"
