--- a/tasks/prepare_engine.yml
+++ b/tasks/prepare_engine.yml
@@ -1,8 +1,21 @@
 ---
-- name: Create installation directory
+- name: Create main installation directory
   file:
-    path: "{{ install_dir}}"
+    path: "{{ install_dir }}"
     state: directory
 
-- name: Download OpenShift installer nightly build
-  include_tasks: installer_source/nightly.yml
+- name: Create sub-directory for installation resources
+  file:
+    path: "{{ resources_subdir }}"
+    state: directory
+
+- name: Set up oVirt credentials
+  include_tasks: ovirt_credentials.yml
+
+# - name: Download OpenShift installer nightly build
+#   include_tasks: installer_source/nightly.yml
+#   when: ocp_installer_source == "nightly"
+
+# - name: Download {{ oc_binary }} tool nightly build
+#   include_tasks: oc_source/nightly.yml
+#   when: oc_source == "nightly"
