Config files templates

--- a/tasks/ovirt_credentials.yml
+++ b/tasks/ovirt_credentials.yml
@@ -2,11 +2,16 @@
 - name: Link oVirt CA certificate to {{ trusted_ca_dir }}
   file:
     state: link
-    src: /etc/pki/ovirt-engine/ca.pem
-    dest: "{{ trusted_ca_dir }}/ca.pem"
+    src: "{{ engine_ca_path }}/{{ engine_ca }}"
+    dest: "{{ trusted_ca_dir }}/{{ engine_ca }}"
   notify: Update CA trust
+
+- name: Load oVirt CA certificate content
+  shell: "cat {{ engine_ca_path }}/{{ engine_ca }}"
+  register: engine_ca_content
+  no_log: true
 
 - name: Create oVirt credentials file
   template:
-    dest: "{{ install_dir }}/ovirt-config.yml"
+    dest: "{{ install_dir }}/{{ ovirt_credentials_file }}"
     src: ovirt-config.j2
