--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,6 +6,8 @@ ocp_installer_source: nightly
 ocp_installer_version: 4.4
 
 # RHCOS
-rhcos_use_custom_template: no
+rhcos_use_custom_template: false
 
 oc_binary: oc  # Alternative is kubectl
+ovirt_network_name: ovirtmgmt
+tmpfs_for_master_nodes: false  # Not implemented yet
