--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,13 @@
 ---
 # tasks file for ovirt.ocp4-ipi
+
+# TODO: Fail early if we don't have DNS records
 - name: Prepare oVirt engine as the installer machine
   include_tasks: prepare_engine.yml
 
 - name: Upload custom RHCOS template
   include_tasks: upload_custom_rhcos.yml
   when: rhcos_use_custom_template
+
+- name: Perform OCP installation
+  include_tasks: ocp_install.yml
