--- a/tasks/ovirt_credentials.yml
+++ b/tasks/ovirt_credentials.yml
@@ -2,12 +2,12 @@
 - name: Link oVirt CA certificate to {{ trusted_ca_dir }}
   file:
     state: link
-    src: "{{ engine_ca_path }}/{{ engine_ca }}"
+    src: "{{ engine_cafile }}"
     dest: "{{ trusted_ca_dir }}/{{ engine_ca }}"
   notify: Update CA trust
 
 - name: Load oVirt CA certificate content
-  shell: "cat {{ engine_ca_path }}/{{ engine_ca }}"
+  shell: "cat {{ engine_cafile }}"
   register: engine_ca_content
   no_log: true
 
