--- a/tasks/ocp_install.yml
+++ b/tasks/ocp_install.yml
@@ -4,7 +4,7 @@
       shell: "{{ install_dir }}/{{ installer_binary }} create cluster --dir={{ resources_subdir }} --log-level={{ ocp_installer_log_level }}"
       environment:
         OVIRT_CONFIG: "{{ install_dir }}/{{ ovirt_credentials_file }}"
-      when: not rhcos_use_custom_template
+      when: custom_rhcos_template is not defined
       register: ocp_install_result
       no_log: true
 
@@ -12,12 +12,12 @@
       shell: "{{ install_dir }}/{{ installer_binary }} create cluster --dir={{ resources_subdir }} --log-level={{ ocp_installer_log_level }}"
       environment:
         OVIRT_CONFIG: "{{ install_dir }}/{{ ovirt_credentials_file }}"
-        OPENSHIFT_INSTALL_OS_IMAGE_OVERRIDE: rhcos_custom
+        OPENSHIFT_INSTALL_OS_IMAGE_OVERRIDE: "{{ custom_rhcos_template }}"
         TF_VAR_ovirt_template_mem: 32768
         TF_VAR_ovirt_template_cpu: 8
         TF_VAR_ovirt_master_mem: 32768
         TF_VAR_ovirt_master_cpu: 8
-      when: rhcos_use_custom_template
+      when: custom_rhcos_template is defined
       register: ocp_install_result
       no_log: true
 
