--- a/tasks/ocp_install.yml
+++ b/tasks/ocp_install.yml
@@ -1,4 +1,8 @@
 ---
+- name: Print message about installation log
+  debug:
+    msg: "The installation is starting. You can follow its progress in {{ resources_subdir }}/{{ installer_log_file }}"
+
 - block:
     - name: Install OpenShift {{ ocp_installer_version }} on oVirt without using custom RHCOS template
       shell: "{{ install_dir }}/{{ installer_binary }} create cluster --dir={{ resources_subdir }} --log-level={{ ocp_installer_log_level }}"
@@ -13,10 +17,10 @@
       environment:
         OVIRT_CONFIG: "{{ install_dir }}/{{ ovirt_credentials_file }}"
         OPENSHIFT_INSTALL_OS_IMAGE_OVERRIDE: "{{ custom_rhcos_template }}"
-        TF_VAR_ovirt_template_mem: 32768
-        TF_VAR_ovirt_template_cpu: 8
-        TF_VAR_ovirt_master_mem: 32768
-        TF_VAR_ovirt_master_cpu: 8
+        TF_VAR_ovirt_template_mem: "{{ rhcos_node_memory_mb }}"
+        TF_VAR_ovirt_template_cpu: "{{ rhcos_node_cpu }}"
+        TF_VAR_ovirt_master_mem: "{{ rhcos_node_memory_mb }}"
+        TF_VAR_ovirt_master_cpu: "{{ rhcos_node_cpu }}"
       when: custom_rhcos_template is defined
       register: ocp_install_result
       no_log: true
