--- a/tasks/ovirt_info.yml
+++ b/tasks/ovirt_info.yml
@@ -1,10 +1,8 @@
 ---
-- name: Authenticate with oVirt
-  ovirt_auth:
-    url: "{{ engine_url }}"
-    username: "{{ engine_user }}"
-    password: "{{ engine_password }}"
-    ca_file: "{{ engine_cafile }}"
+- name: Fail if not authenticated
+  fail:
+    msg: Please authenticate with oVirt engine before running this role
+  when: ovirt_auth is undefined or not ovirt_auth
 
 - name: Get oVirt cluster info
   ovirt_cluster_info:
