--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,13 +2,13 @@
 # defaults file for ovirt.ocp4-ipi
 # These are basic default you might want to change according to your conditions
 
-ocp_installer_source: nightly  # At this point, only nightly is supported
-oc_source: nightly  # At this point, only nightly is supported
-ocp_installer_version: 4.4  # oVirt is supported as an OCP provider since OCP4.4
+ocp_installer_source: nightly
+oc_source: nightly
+ocp_installer_version: 4.4
 ocp_installer_log_level: debug
 ovirt_network_name: ovirtmgmt
 tmpfs_for_master_nodes: false  # Not implemented yet
-master_count: 3  # Keep in mind that having less than three master nodes is unsupported
+master_count: 3
 worker_count: 3
 
 # Miscellaneous steps
