Remove update CA trust handler

--- a/tasks/ovirt_credentials.yml
+++ b/tasks/ovirt_credentials.yml
@@ -4,7 +4,11 @@
     state: link
     src: "{{ engine_cafile }}"
     dest: "{{ trusted_ca_dir }}/{{ engine_ca }}"
-  notify: Update CA trust
+  register: link_ca
+
+- name: Update CA trust
+  command: /bin/update-ca-trust
+  when: link_ca.changed
 
 - name: Load oVirt CA certificate content
   shell: "cat {{ engine_cafile }}"
