--- a/tasks/ovirt_credentials.yml
+++ b/tasks/ovirt_credentials.yml
@@ -4,18 +4,18 @@
     state: link
     src: "{{ engine_cafile }}"
     dest: "{{ trusted_ca_dir }}/{{ engine_ca }}"
-  register: link_ca
-
-- name: Update CA trust
-  command: /bin/update-ca-trust
-  when: link_ca.changed
+  notify: Update CA trust
 
 - name: Load oVirt CA certificate content
-  shell: "cat {{ engine_cafile }}"
+  command: "cat {{ engine_cafile }}"
   register: engine_ca_content
   no_log: true
+  changed_when: false
 
 - name: Create oVirt credentials file
   template:
     dest: "{{ install_dir }}/{{ ovirt_credentials_file }}"
     src: ovirt-config.j2
+
+- name: Execute handlers to update CA trust if necessary
+  meta: flush_handlers
