--- a/tasks/dns_check.yml
+++ b/tasks/dns_check.yml
@@ -1,6 +1,8 @@
 ---
 - name: Check for OpenShift API DNS entry
   command: "host api.{{ ocp_cluster_name }}.{{ ocp_base_domain }}"
+  changed_when: false
 
 - name: Check for OpenShift Ingress DNS entry by trying to resolve webconsole
   command: "host console-openshift-console.apps.{{ ocp_cluster_name }}.{{ ocp_base_domain }}"
+  changed_when: false
