--- a/tasks/installer_source/nightly.yml
+++ b/tasks/installer_source/nightly.yml
@@ -6,18 +6,4 @@
       latest-{{ ocp_installer_version }}/{{ nightly_source_installer_file }}"
   register: installer_download
 
-- name: Extract installer
-  unarchive:
-    remote_src: true
-    src: "{{ installer_download.dest }}"
-    dest: "{{ install_dir }}"
-
-- name: Get installer version
-  command: "{{ install_dir }}/{{ installer_binary }} version"
-  register: installer_version
-  no_log: true
-  changed_when: false
-
-- name: Print installer version
-  debug:
-    msg: "OpenShift Installer Version: {{ installer_version.stdout_lines[0].split()[-1] }}"
+- include_tasks: common.yml
