Change mode of oVirt credential file

--- a/tasks/ovirt_credentials.yml
+++ b/tasks/ovirt_credentials.yml
@@ -16,6 +16,7 @@
   template:
     dest: "{{ install_dir }}/{{ ovirt_credentials_file }}"
     src: ovirt-config.j2
+    mode: 0666
 
 - name: Execute handlers to update CA trust if necessary
   meta: flush_handlers
